jfwu/qszhuan : #1426: release defect fix slide#28,edit report period question prompt text got truncated

--- a/datawinners/media/css/scss/section_questionnaire.scss
+++ b/datawinners/media/css/scss/section_questionnaire.scss
@@ -105,7 +105,7 @@
         }
         .question {
           width: auto;
-          height: 85px;
+          height: auto;
         }
         .add_link {
           display: block;
